[package]
name = "doh-dns"
version = "0.1.2"
authors = ["Joy Labs Engineering"]
edition = "2018"
repository = "https://github.com/joylabs/doh-dns"
homepage = "https://github.com/joylabs/doh-dns"
documentation = "https://docs.rs/doh-dns"
license = "MIT"
readme = "README.md"
keywords = ["dns", "doh"]
description = """
A DNS over HTTPS (DoH) library that queries public DoH servers provided by 
Google and Clouflare based on `async/await`, `hyper`, and `tokio`.
"""

[dependencies]
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
native-tls = "0.2"
futures-util-preview = "0.3.0-alpha.19"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
async-trait = "0.1.13"
num = "0.2.0"
num-traits = "0.2"
num-derive = "0.3.0"
idna = "0.2.0"
tokio = "0.2.0-alpha.6"
paste = "0.1.6"
log = "0.4.8"
